--- a/goobi-viewer-theme-reference/WebContent/resources/themes/reference/css/less/layout.less
+++ b/goobi-viewer-theme-reference/WebContent/resources/themes/reference/css/less/layout.less
@@ -10,7 +10,7 @@
 	bottom: 0;
 	left: 0;
 	background-color: rgba(0,0,0,0.75);
-	z-index: 2000;
+	z-index: 2030;
 }
 
 /* HEADER */
@@ -20,7 +20,7 @@
 		position: sticky;
 		top: 0;
 		background-color: @middleblack;
-		z-index: 1090;		
+		z-index: 2020;		
 	}
 	&__top {
 		display: flex;
@@ -282,7 +282,7 @@
 	display: none;
 	position: fixed;
 	top: 3rem;
-	z-index: 2010;
+	z-index: 2030;
 	span {
 		transform: rotate(45deg);
 		&:before {
@@ -325,7 +325,7 @@
 		&__bottom-wrapper {
 			position: sticky;
 			top: 30px;
-			z-index: 1080;			
+			z-index: 2010;			
 		}
 		&__bottom {
 			padding: 1rem 0;
@@ -366,7 +366,7 @@
 			background-color: @neutralgray;
 			transition: right .2s linear;
 			overflow-y: auto;
-			z-index: 2010;
+			z-index: 2030;
 			&.in {
 				right: 0;
 			}
